Make the sourcecode work with Java 11